scripts: add $EXCLUDE_DIRS to the config
Add an ability to (recursively) exclude parts of the filesystem from
scanning by mounting tmpfs over them. Re-including parts of an excluded
tree is not supported.

Signed-off-by: Ivan Shapovalov <intelfx@intelfx.name>

--- a/scripts/beesd.conf.sample
+++ b/scripts/beesd.conf.sample
@@ -21,6 +21,9 @@ UUID=xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
 ## Mount options
 # MOUNT_OPTIONS=""
 
+## Directories to exclude from scanning (recursively), relative to the filesystem root
+# EXCLUDE_DIRS=()
+
 ## Bees DB size
 # Hash Table Sizing
 # sHash table entries are 16 bytes each
